syntax = "proto3";

package auth;

service AuthService {
    rpc Signup (SignupRequest) returns (SignupResponse);
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc Validate (ValidateRequest) returns (ValidateResponse);
}

// signup messages
message SignupRequest {
    string email = 1;
    string password = 2;
}

message SignupResponse {
    int32 status = 1;
    repeated string errors = 2;
}

// login messages
message LoginRequest {
    string email = 1;
    string password = 2;
}

message LoginResponse {
    int32 status = 1;
    repeated string errors = 2;
    string token = 3;
}

// verify
message ValidateRequest {
    string token = 1;
}

message ValidateResponse {
    int32 status = 1;
    repeated string errors = 2;
    int32 userId = 3;
}
